# bgmdeck

./: .gitignore  README.md  RELEASE_NOTES.md
.github/workflows/: macos-release.yml
bgm_deck/: Cargo.toml  Makefile
bgm_deck/.github/workflows/: release.yml
bgm_deck/src/: main.rs
